# neovim.cpp

./: .gitignore  CMakeLists.txt  gen_api.py  vcpkg.json
include/: nvim_rpc.hpp
include/impl/: nvim_rpc.hpp
src/: socket.cpp
